name:           accept-all
version:        0.1
cabal-version:  >= 1.10
homepage:       http://www.github.com/goldfirere/singletons
category:       Dependent Types
author:         Richard Eisenberg <rae@cs.brynmawr.edu>, Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:     Richard Eisenberg <rae@cs.brynmawr.edu>, Jan Stolarek <jan.stolarek@p.lodz.pl>
bug-reports:    https://github.com/goldfirere/singletons/issues
stability:      stable
tested-with:    GHC == 8.4.2
license:        BSD3
license-file:   LICENSE
build-type:     Simple
synopsis:       Accept all test files
description:    After running the @singletons@ tests, run this executable
                to accept the new output.

source-repository head
  type:     git
  location: https://github.com/goldfirere/singletons.git

executable accept-all
  hs-source-dirs:     .
  ghc-options:        -Wall -threaded
  default-language:   Haskell2010
  main-is:            AcceptAll.hs
  build-depends:      base >= 4.6 && < 5,
                      text >= 1.2,
                      turtle >= 1.5
